# yaalpp

./: .gitignore  CMakeLists.txt  Constants.h  LICENSE  Makefile  README.md  Utils.cpp  Yaal.cpp  Yaal.h  main.cpp  opencv.sh  pheromones.cpp  video.cpp  video.h  world.hpp
cuda/: add_to_map.cu  collision_gpu.cu  diffusion_gpu.cu  diffusion_gpu.h  yaal_update.cu
diffusion/: badbadbad.hpp  separablefilter.cpp  separablefilter.hpp
entity/: Yaal.cpp  Yaal.h  pheromones.h  plant.cpp  plant.hpp
examples/: tensor_broadcast_mul.cpp
physics/: circle.cpp  circle.hpp  collision.cpp  quadtree.cpp  quadtree.hpp  rect.cpp  rect.hpp
simulation/: Environment.cpp  Environment.h
tests/: test.cpp
topology/: topology.cpp  topology.cu  topology.h
utils/: circle.cpp  circle.hpp  mpi_decomposition.cpp  mpi_decomposition.hpp  offset.hpp  rect.cpp  rect.hpp  save.cpp  save.hpp  utils.cpp  utils.h
video/: stream.cpp  stream.h
